2005-09-21  Martin Blom  <martin@blom.org>

	* Imported AROS updates to aros.audio.

	* More OS4 porting. 

2005-09-20  Martin Blom  <martin@blom.org>

	* Added build environment support for OS4.

	* AHI Preferences (ClassAct): Ported to Reaction. At least it
	compiles without errors. If I had libreaction.a and libraauto.a
	for clib2/OS4 it would even link.

	* ahi.device: Now builds for OS4 using the OS4 cross compiler,
	the OS4 SDK from GoldED and sfdc 1.4.

	* AddAudioModes: Ported to OS4.

2005-09-11  Martin Blom  <martin@blom.org>

	* Bumped revision of ahi.device to 6.4.

	* Bumped revision of AHI Preferences to 6.1.

	* Bumped revision of AHI-Handler to 6.1.

	* Bumped revision of AddAudioModes to 6.1.

	* Bumped revision of ac97.audio to 6.1.

	* Bumped revision of aros.audio to 6.1.

	* Bumped revision of emu10kx.audio to 6.3.

	* Bumped revision of filesave.audio to 6.1.

	* Bumped revision of void.audio to 6.1.

	* Rebuilt using a gcc that does not have emulated instructions in
	libgcc.a.

2005-09-11  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 6.2.

	* emu10kx.audio: OS4 version use 80 Hz interrupt instead of 1
	kHz. [Davy Wentzler]

2005-08-11  Martin Blom  <martin@blom.org>

	* Documentation: Added PDF versions of the User's And Developer's
	guides. [Thor]

2005-06-19  Martin Blom  <martin@blom.org>

	* Released toccata.audio 4.7.

	* ahiusr.texinfo: Added notes about AHItoccataPlayBufferSize and
	AHItoccataRecordBufferSize.

	* toccata.audio:  Added the variables AHItoccataPlayBufferSize and
	AHItoccataRecordBufferSize.

2005-04-13  Martin Blom  <martin@blom.org>

	* AHI preferences: Added updated german translation by Stefan
	Bojartschuk.

2005-04-06  Martin Blom  <martin@blom.org>

	* ahi.device: Harry's ixemul/SIGBREAKF_CTRL_F fix seem to have
	fixed the infamous DisplayBeep()/IPrefs/sound.datatype/whatever
	bug that several people have reported. This must be my lucky week.
	[Luca "Hexaae" Longone]
